src/test/deca/context/invalid/created/binary_exp/op_arith/minus_a_null.deca
// Description :
//    test minus entre un a et un null
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (3.33) L’opérande gauche est de type a, L’opérande droite est de type null. Or les types des opérandes doivent être ‘int’ ou ‘float’ pour l’opérateur -
class A{}
{
A a = new A();
int c = a - null;
}
